--- a/ultrasound-iot-image-gen/Cargo.toml
+++ b/ultrasound-iot-image-gen/Cargo.toml
@@ -4,3 +4,21 @@ version = "0.1.0"
 edition = "2024"
 
 [dependencies]
+ndarray = "0.16.1"
+ndarray-npy = "0.9.1"
+num-complex = "0.4"
+image = "0.24"
+rayon = "1.6"
+rand = "0.8"
+uniffi = { version = "0.29.0", features = [ "cli" ] }
+
+[build-dependencies]
+uniffi = { version = "0.29.0", features = [ "build" ] }
+
+[lib]
+crate-type = ["cdylib", "staticlib"]
+name = "ultrasound"
+
+[[bin]]
+name = "uniffi-bindgen"
+path = "uniffi-bindgen.rs"
