--- a/ultrasound-iot-server/Cargo.toml
+++ b/ultrasound-iot-server/Cargo.toml
@@ -18,6 +18,7 @@ config = "0.15.11"
 
 tracing = "0.1.41"
 tracing-subscriber = "0.3.19"
+tracing-actix-web = "=0.7.18"
 
 uuid = { version = "1.16.0", features = ["v4"] }
 secrecy = { version = "0.10.3", features = ["serde"] }
